memelord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memelord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memelord
  template:
    metadata:
      labels:
        app: memelord
    spec:
      volumes:
      - name: settings
        projected:
          defaultMode: 420
          sources:
          - configMap:
              name: settings
      containers:
        - name: memelord
          image: ghcr.io/l4rm4nd/memelord:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - mountPath: /opt/app/myproject/settings.py
              name: settings
              readOnly: true
              subPath: settings.py
