memelord-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memelord
spec:
  type: ClusterIP
  selector:
    app: memelord
  ports:
    - name: http
      port: 80
      targetPort: 8000
